--- a/Website/css/style.css
+++ b/Website/css/style.css
@@ -128,14 +128,33 @@ a {
   list-style-image: url(../Images/tick.svg);
   padding-left: 3rem;
 }
-.list--tick .list__item{
+.list--tick .list__item {
   padding-left: 0.5rem;
   margin-bottom: 1rem;
 }
 
 @media screen and (min-width: 1024px) {
-  .list--tick .list__item{
-  padding-left: 0rem;
+  .list--tick .list__item {
+    padding-left: 0rem;
+  }
 }
 
+/* Icons */
+.icon {
+  width: 40px;
+  height: 40px;
+}
+
+.icon--primary {
+  fill: var(--color-primary);
+}
+
+.icon-container {
+  background: #f3f9fa;
+  width: 64px;
+  height: 64px;
+  border-radius: 100%;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
 }
