--- a/Website/css/style.css
+++ b/Website/css/style.css
@@ -9,6 +9,7 @@ html {
   --color-accent: #ff3400;
   --color-headings: #1b0760;
   --color-body: #918ca4;
+  --color-body-darker: #5c5577;
   --color-border: #ccc;
   --border-radius: 30px;
 }
@@ -154,8 +155,17 @@ a {
   height: 40px;
 }
 
+.icon--small{
+  width: 30px;
+  height: 30px;
+}
+
 .icon--primary {
   fill: var(--color-primary);
+}
+
+.icon--white{
+  fill: #fff;
 }
 
 .icon-container {
@@ -166,6 +176,10 @@ a {
   display: inline-flex;
   justify-content: center;
   align-items: center;
+}
+
+.icon-container--accent{
+  background-color: var(--color-accent);
 }
 
 /* Buttons */
@@ -371,4 +385,102 @@ a {
 
 .media__image{
   margin-top: 1rem;
+}
+
+/* Quotes */
+
+.quote{
+  font-size: 3rem;
+  font-style: italic;
+  color: var(--color-body-darker);
+  letter-spacing: 1px;
+  line-height: 1.3;
+}
+
+.quote__text::before{
+  content: open-quote;
+}
+
+.quote__text::after{
+  content: close-quote;
+}
+
+.quote__author{
+  font-size: 3rem;
+  font-weight: 500;
+  margin-bottom: 0;
+}
+.quote__organization{
+  color: var(--color-headings);
+  opacity: 0.4;
+  font-size: 2rem;
+}
+
+.quote__line{
+  position: relative;
+  bottom: 10px;
+}
+
+
+@media screen and (min-width: 1024px) {
+
+  .quote{
+    font-size: 2rem;
+  }
+  .quote__author{
+    font-size: 2.4rem;
+  }
+  .quote__organization{
+    font-size: 1.6rem;
+  }
+}
+
+/* Grids */
+
+.grid{
+  display: grid;
+}
+
+@media screen and (min-width: 768px){
+  .grid--1x2{
+    grid-template-columns: 1fr 1fr; 
+  }
+}
+
+@media screen and (min-width: 1024px){
+  .grid--1x3{
+    grid-template-columns: repeat(3, 1fr); 
+  }
+}
+
+/* Testimonials */
+
+.testimonial{
+  padding: 3rem;
+}
+
+.testimonial__image{
+  position: relative;
+  
+}
+
+.testimonial__image > img{
+  width: 100%;
+}
+
+
+.testimonial__image > .icon-container{
+position: absolute;
+right: -32px;
+top: 3rem;
+}
+
+@media screen and (min-width: 768px){
+  .testimonial .quote, .testimonial .quote__author{
+    font-size: 2.5rem;
+  }
+
+  .testimonial .quote{
+    margin-left: 6rem;
+  }
 }
