--- a/Website/css/style.css
+++ b/Website/css/style.css
@@ -155,7 +155,7 @@ a {
   height: 40px;
 }
 
-.icon--small{
+.icon--small {
   width: 30px;
   height: 30px;
 }
@@ -164,7 +164,7 @@ a {
   fill: var(--color-primary);
 }
 
-.icon--white{
+.icon--white {
   fill: #fff;
 }
 
@@ -178,7 +178,7 @@ a {
   align-items: center;
 }
 
-.icon-container--accent{
+.icon-container--accent {
   background-color: var(--color-accent);
 }
 
@@ -219,6 +219,11 @@ a {
 }
 .btn--accent:hover {
   background: #e94920;
+}
+
+.btn--stretched {
+  padding-left: 6rem;
+  padding-right: 6rem;
 }
 
 .btn--block {
@@ -339,11 +344,11 @@ a {
   letter-spacing: 1px;
 }
 
-.plan--popular .card__header{
+.plan--popular .card__header {
   position: relative;
 }
 
-.plan--popular .card__header::before{
+.plan--popular .card__header::before {
   content: url(../Images/popular.svg);
   width: 40px;
   display: inline-block;
@@ -353,43 +358,41 @@ a {
 }
 
 @media screen and (min-width: 1024px) {
-
-  .plan__name{
+  .plan__name {
     font-size: 1.4rem;
   }
-  .plan__price{
+  .plan__price {
     font-size: 5rem;
   }
-  .plan__billing-cycle{
+  .plan__billing-cycle {
     font-size: 1.6rem;
   }
-  .plan__description{
+  .plan__description {
     font-size: 1.7rem;
   }
-
 }
 
 /* Media */
 
-.media{
+.media {
   display: flex;
 }
 
-.media__title{
+.media__title {
   margin-top: 0;
 }
 
-.media__body{
+.media__body {
   margin: 0 2rem;
 }
 
-.media__image{
+.media__image {
   margin-top: 1rem;
 }
 
 /* Quotes */
 
-.quote{
+.quote {
   font-size: 3rem;
   font-style: italic;
   color: var(--color-body-darker);
@@ -397,90 +400,160 @@ a {
   line-height: 1.3;
 }
 
-.quote__text::before{
+.quote__text::before {
   content: open-quote;
 }
 
-.quote__text::after{
+.quote__text::after {
   content: close-quote;
 }
 
-.quote__author{
+.quote__author {
   font-size: 3rem;
   font-weight: 500;
   margin-bottom: 0;
 }
-.quote__organization{
+.quote__organization {
   color: var(--color-headings);
   opacity: 0.4;
   font-size: 2rem;
 }
 
-.quote__line{
+.quote__line {
   position: relative;
   bottom: 10px;
 }
 
-
 @media screen and (min-width: 1024px) {
-
-  .quote{
+  .quote {
     font-size: 2rem;
   }
-  .quote__author{
+  .quote__author {
     font-size: 2.4rem;
   }
-  .quote__organization{
+  .quote__organization {
     font-size: 1.6rem;
   }
 }
 
 /* Grids */
 
-.grid{
+.grid {
   display: grid;
 }
 
-@media screen and (min-width: 768px){
-  .grid--1x2{
-    grid-template-columns: 1fr 1fr; 
+@media screen and (min-width: 768px) {
+  .grid--1x2 {
+    grid-template-columns: 1fr 1fr;
   }
 }
 
-@media screen and (min-width: 1024px){
-  .grid--1x3{
-    grid-template-columns: repeat(3, 1fr); 
+@media screen and (min-width: 1024px) {
+  .grid--1x3 {
+    grid-template-columns: repeat(3, 1fr);
   }
 }
 
 /* Testimonials */
 
-.testimonial{
+.testimonial {
   padding: 3rem;
 }
 
-.testimonial__image{
+.testimonial__image {
   position: relative;
-  
 }
 
-.testimonial__image > img{
+.testimonial__image > img {
   width: 100%;
 }
 
-
-.testimonial__image > .icon-container{
-position: absolute;
-right: -32px;
-top: 3rem;
+.testimonial__image > .icon-container {
+  position: absolute;
+  right: -32px;
+  top: 3rem;
 }
 
-@media screen and (min-width: 768px){
-  .testimonial .quote, .testimonial .quote__author{
+@media screen and (min-width: 768px) {
+  .testimonial .quote,
+  .testimonial .quote__author {
     font-size: 2.5rem;
   }
 
-  .testimonial .quote{
+  .testimonial .quote {
     margin-left: 6rem;
   }
+}
+
+/* Callouts */
+
+.callout {
+  padding: 4rem;
+  border-radius: 5px;
+}
+
+.callout--primary {
+  background-color: var(--color-primary);
+  color: #fff;
+}
+
+.callout__heading {
+  color: #fff;
+  margin-top: 0;
+  font-size: 3rem;
+}
+.callout__content {
+  text-align: center;
+}
+
+.callout .btn {
+  justify-self: center;
+  align-self: center;
+}
+
+@media screen and (min-width: 768px) {
+  .callout .grid--1x2 {
+    grid-template-columns: 1fr auto;
+  }
+
+  .callout__content {
+    text-align: left;
+  }
+
+  .callout .btn {
+    justify-self: start;
+    margin: 0 2rem;
+  }
+}
+
+/* Collapsibles */
+
+.collapsible__header {
+  display: flex;
+  justify-content: space-between;
+}
+.collapsible__heading {
+  margin-top: 0;
+  font-size: 3rem;
+}
+
+.collapsible__chevron {
+  transform: rotate(-90deg);
+  transition: transform 0.3s;
+}
+
+.collapsible__content {
+  max-height: 0;
+  overflow: hidden;
+  opacity: 0;
+  transition: all 0.3s;
+}
+
+.collapsible--expanded .collapsible__chevron {
+  transform: rotate(0);
+}
+
+.collapsible--expanded .collapsible__content {
+  max-height: 100vh;
+  opacity:1 ;
 }
