--- a/Website/css/style.css
+++ b/Website/css/style.css
@@ -198,7 +198,7 @@ a {
   font-size: 1.8rem;
   font-weight: 600;
   margin: 1rem 0;
-  padding: 2rem 3rem;
+  padding: 2rem 4vw;
   text-transform: uppercase;
   white-space: nowrap;
   text-align: center;
@@ -293,6 +293,7 @@ a {
 .input--group .input {
   border: 0;
   flex-grow: 1;
+  width: 0;
   padding: 1.5rem 2rem;
 }
 
@@ -607,7 +608,7 @@ a {
 /* Blocks */
 
 .block {
-  --padding-vertical: 6rem;
+  --padding-vertical: 4rem;
   padding: var(--padding-vertical) 2rem;
 }
 
@@ -747,8 +748,9 @@ a {
 }
 
 .block-domain__prices {
+  color: var(--color-headings);
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(2, 6rem);
   font-size: 2rem;
   font-weight: 600;
@@ -778,7 +780,7 @@ a {
 
 .feature {
   gap: 4rem 2rem;
-  margin: 12rem 0;
+  margin: 0;
 }
 
 .feature:first-of-type {
